QA_Project/force-app/main/default/objects/Invoice_Item__c/fields/Accomodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Type__c</fullName>
    <label>Accomodation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>