QA_Project/force-app/main/default/objects/Invoice_Item__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <label>Invoice Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course_Invoice__c.Invoice_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Invoice_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>