QA_Project/force-app/main/default/objects/Invoice_Item__c/fields/Miles_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Miles_Travelled__c</fullName>
    <label>Miles Travelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>