QA_Project/force-app/main/default/objects/Invoice_Item__c/fields/Pay_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Pay_per_hour__c</fullName>
    <label>Pay per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>