QA_Project/force-app/main/default/objects/Invoice_Item__c/fields/Total_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Pay__c</fullName>
    <label>Total Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>