QA_Project/force-app/main/default/objects/Invoice_Item__c/recordTypes/Services.recordType-meta.xml
<RecordType>
    <fullName>Services</fullName>
    <active>true</active>
    <label>Services</label>
</RecordType>